# noneed

./: Cargo.toml
src/: error.rs  lib.rs
src/imp/: ai.rs  cworld.rs  mod.rs  mworld.rs
src/imp/ai/: decide_move.rs  mod.rs
src/imp/cworld/: charas.rs  cworld.rs  goals.rs  mod.rs  nodes.rs
src/imp/cworld/charas/: battle_status.rs  chara.rs  charas.rs  mod.rs
src/imp/cworld/cond/: choose_randomly.rs  condition.rs  condition_item.rs  condition_items.rs  conditions.rs  mod.rs  rand_from_slice.rs
src/imp/cworld/goals/: goal.rs  goals.rs  mod.rs
src/imp/cworld/move/: move.rs
src/imp/cworld/nodes/: battle_data.rs  condition.rs  mod.rs  node.rs  nodes.rs  obstruction.rs  route.rs
src/imp/cworld/obstructions/: mod.rs  obstruction.rs
src/imp/mworld/: attributes.rs  mod.rs  mworld.rs  parameters.rs
src/tests/: mod.rs
