[package]
name = "noneed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"
async-channel = "1"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
rand = "0.8"
futures-lite = "1"
futures = { version = "*", features = ["executor", "thread-pool"] }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
smol = "*"
rusty_pool = "*"
